generated/checker-for-evaluation/generated/test-Out-of-Bound-3f7d9c1964fcd16d02a8a9d4fd6f6cb60c4cc530/build_logs/0/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPostCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:77:9: error: ‘Optional’ was not declared in this scope; did you mean ‘clang::ObjCImplementationControl::Optional’?
   77 |     if (Optional<bool> CheckedOpt = State->get<HashKeyChecked>()) {
      |         ^~~~~~~~
      |         clang::ObjCImplementationControl::Optional
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ExprObjC.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/CFG.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/AnalysisDeclContext.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclObjC.h:118:56: note: ‘clang::ObjCImplementationControl::Optional’ declared here
  118 | enum class ObjCImplementationControl { None, Required, Optional };
      |                                                        ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:77:18: error: expected primary-expression before ‘bool’
   77 |     if (Optional<bool> CheckedOpt = State->get<HashKeyChecked>()) {
      |                  ^~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:77:18: error: expected ‘)’ before ‘bool’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:77:8: note: to match this ‘(’
   77 |     if (Optional<bool> CheckedOpt = State->get<HashKeyChecked>()) {
      |        ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:78:21: error: ‘CheckedOpt’ was not declared in this scope; did you mean ‘Checker’?
   78 |       WasChecked = *CheckedOpt;
      |                     ^~~~~~~~~~
      |                     Checker
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
